igt@xe_exec_threads@threads* - dmesg-warn - *ERROR* GT0: SCHED_DONE: Unexpected engine state 0x02b1*
<6> [703.113863] Console: switching to colour dummy device 80x25
<6> [703.114311] [IGT] xe_exec_threads: executing
<6> [703.115926] [IGT] xe_exec_threads: starting subtest threads-cm-shared-vm-userptr-invalidate
<3> [704.756288] xe 0000:03:00.0: [drm] *ERROR* GT0: SCHED_DONE: Unexpected engine state 0x02b1, guc_id=6, runnable_state=0
<3> [704.756731] xe 0000:03:00.0: [drm] *ERROR* GT0: G2H action 0x1002 failed (-EPROTO) len 3 msg 02 10 00 90 06 00 00 00 00 00 00 00
<6> [704.785664] xe 0000:03:00.0: [drm] GT0: Capture 1.1: CTB is dead - reason=0x202
<6> [704.785672] xe 0000:03:00.0: [drm] GT0: Capture 1.2: **** Xe Device Coredump ****
<6> [704.785674] xe 0000:03:00.0: [drm] GT0: Capture 1.3: PCI ID: 0xe20b
<6> [704.785676] xe 0000:03:00.0: [drm] GT0: Capture 1.4: PCI revision: 0x00
<6> [704.785677] xe 0000:03:00.0: [drm] GT0: Capture 1.5: GT id: 0
<6> [704.785679] xe 0000:03:00.0: [drm] GT0: Capture 1.6: Tile: 0
<6> [704.785680] xe 0000:03:00.0: [drm] GT0: Capture 1.7: Type: main
<6> [704.785682] xe 0000:03:00.0: [drm] GT0: Capture 1.8: IP ver: 20.1.0
<6> [704.785683] xe 0000:03:00.0: [drm] GT0: Capture 1.9: CS reference clock: 19200000
<6> [704.785685] xe 0000:03:00.0: [drm] GT0: Capture 1.10: GT id: 1
<6> [704.785687] xe 0000:03:00.0: [drm] GT0: Capture 1.11: Tile: 0
<6> [704.785688] xe 0000:03:00.0: [drm] GT0: Capture 1.12: Type: media
<6> [704.785690] xe 0000:03:00.0: [drm] GT0: Capture 1.13: IP ver: 13.1.1
<6> [704.785691] xe 0000:03:00.0: [drm] GT0: Capture 1.14: CS reference clock: 19200000
<6> [704.785693] xe 0000:03:00.0: [drm] GT0: Capture 1.15: **** GT #0 ****
<6> [704.785694] xe 0000:03:00.0: [drm] GT0: Capture 1.16: Tile: 0
<6> [704.785696] xe 0000:03:00.0: [drm] GT0: Capture 1.17: **** GuC Log ****
<6> [704.785697] xe 0000:03:00.0: [drm] GT0: Capture 1.18: GuC firmware: xe/bmg_guc_70.bin
<6> [704.785699] xe 0000:03:00.0: [drm] GT0: Capture 1.19: GuC version: 70.36.0 (wanted 70.29.2)
<6> [704.785701] xe 0000:03:00.0: [drm] GT0: Capture 1.20: Kernel timestamp: 0xA4119B4D85 [704670027141]
<6> [704.785703] xe 0000:03:00.0: [drm] GT0: Capture 1.21: GuC timestamp: 0x343B690BD [14020939965]
<6> [704.785705] xe 0000:03:00.0: [drm] GT0: Capture 1.22: Log level: 3
<6> [704.785797] xe 0000:03:00.0: [drm] GT0: Capture 1.23: Log data: b.FY8hQ?eEz!!)1]!!*'"!!%ND!!*&g!!!!>!!!!#b.FY8J;2p_zz!!",Az!!",Az!!!!#b.FYI^@2'g!!"gZ!!"gZ!"],1!!"gZ!"],1z!!!!#J;0-p!!*'"!!!!'!!*'#!(J46!!3-$!!!"-!!<3%!!#Xlzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
<6> [704.785805] xe 0000:03:00.0: [drm] GT0: Capture 1.24: zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz6`QX\z!!%QR!!"'q!!!!@6`QY9z!!!*r!!!!@hQ=N[6`QZ*z!!!/%!!!!X!!!!^6`Q[Gz!!*52Lu&+5hQ=N[6`Q[dz!!!.Q!!!Q1z6`Q\Sz!!*51z+92rQ6`Q\rz!!*51!!!!"!!!!=6`Q^'z!!%Wc!!!!=hQ=N[6`Q^Gz!!%QR!!"'A!!!!=6`Q_$z!!!*r!!!!=hQ=N[6`Q_Vz!!!/%!!!![!!!!^6`Q`cz!!*52Lu/16hQ=N[6`Qa,z!!!.Q!!!Q1z6`QaLz!!*51z+92rQ6`Qakz!!*51!!!!"!!!!<6`Qbsz!!%Wc!!!!<hQ=N[6`Qc>z!!%QR!!"'4!!!!<6`Qcoz!!!*r!!!!<hQ=N[6`QdMz!!!/%!!!!^!!!!^6`Qe3z!!!.Pz!!(!&6`Qf5z!!!.7zhQ=N[6`Qfcz!!!.:!!'5'
<6> [704.785810] xe 0000:03:00.0: [drm] GT0: Capture 1.25: "989#6`Qg*z!!!.:!!*'!!!!!M6`QgJz!!!.:z!!!!"6`QhMz!!!.9!!!!"!'gM!6`QiRz!!*2Qzz6`Qj]z!!*2M!!!!#!!!!M6`Qk"z!!*2M!!!,bhQ=N[6`QkHz!!!.*hQ=N[hQ=N[6`Ql?z!!!Ha!!!!+hQ=N[6`Qm%z!!!Ha!!!B,z6`Qnaz!!!E;!!!!"hQ=N[6`Qo0z!!%QO!!"*J!!!!M6`QoUz!!!.:"989!!!'5'6`Qonz!!!.:!!!!M!!*'!6`Qp:z!!!.:zz6`Qq/z!!!.9!!!!9!!!B,6`Qr!z!!!.;!VPp^hQ=N[6`Qs*z!!!.<!!"FW!!"FW6`Qsuz!!%QT!!"*J!!!!M6`Qttz!!%QN!!"*J!!!!M6`QuSz!!*2Pzz6`Qunz!!!..hQ=N[hQ=N[6`R"cz!!!Ha!!!"RhQ=N[6`R#Mz!!!Ha!!!B,z6`R%#z!!!E;zhQ=N[6`R%uz!!!0K!!!!2z6`R':z!!!.8zhQ=N[6`R(Jz!!!.7!!!!$hQ=N[6`R)"z!!!.:!!!]5"989#6`R)<z!!!.:!!*'!!!!!&6`R)\z!!!.:z!!!!"6`R*3z!!!.9!!!!"?pF\,6`R+7z!!*2Q!!<3$z6`R,qz!!*2M!!!*&!!!!&6`R-5z!!*2M!!!,bhQ=N[6`R-uz!!!.*hQ=N[hQ=N[6`R.fz!!!Ha!!!!+hQ=N[6`R/(z!!!Ha?iU3mz6`R0rz!!!E;#QOi)hQ=N[6`R1Az!!%QO!&+k'!!!!&6`R1dz!!!.:"989!!!!]56`R24z!!!.:
<6> [704.785816] xe 0000:03:00.0: [drm] GT0: Capture 1.26: !!!!&!!*'!6`R2Sz!!!.:zz6`R34z!!!.9!!!!9?iU3m6`R4&z!!!.;!7rn)hQ=N[6`R51z!!!.<!!"%$!!"%$6`R69z!!%QT!&+k'!!!!&6`R7:z!!%QN!&+k'!!!!&6`R7mz!!*2P!!<